1998-06-14  Jochen Wiedmann  <joe@ispsoft.de> (1.1831)

	* dbd/myMsql.c (MyConnect): mysql_init called for Mysql 3.22.

1998-05-17  Jochen Wiedmann  <joe@ispsoft.de> (1.1830)

	* Makefile.lib: XtractF now creates dependencies from
	  pm_to_blib

	* dbd/myMsql.c: Added db argument to MyConnect() (Required for
	  MySQL 3.22).

1998-05-14  Jochen Wiedmann  <joe@ispsoft.de> (1.1829)

	* dbd/dbdimp.c: Fixed memory leak in FETCH_internal.

	* dbd/dbdimp.c: ChopBlanks no longer chops from the left side.

1998-02-26  Jochen Wiedmann  <joe@ispsoft.de> (1.1828)

	* dbd/dbdimp.c: Added $dbh->{'info'} and $dbh->{'thread_id'}
	  (mysql only)
	* dbd/dbimon.in: Fixed bugs in export mode (Nem W. Schlecht
	  <nem@abattoir.cc.ndsu.nodak.edu>)
	* One more time fixing reconnect problems with Mysql and old
	  client libraries (without mysql_real_connect it's just too
	  ugly! :-(

1998-02-06  Jochen Wiedmann  <joe@ispsoft.de> (1.1827)

	* Makefile.lib (InitializeMysql): Changed the order of the -I
	  statements in $X{INC}. (This patch was already announced in
	  1.1824, but it got lost. :-(
	* tests/ak-dbd.t: Added a missing DROP table.
	
1998-01-31  Jochen Wiedmann  <joe@ispsoft.de> (1.1826)

	* tests/mysql.dbtest: Now using "IS NULL" in SQL queries instead
	  of "= NULL". (Required as of MySQL 3.21.22)
	* Makefile.lib: Now always linking against libgcc.a when using gcc
	  and compiling for MySQL.

1998-01-18  Jochen Wiedmann  <joe@ispsoft.de> (1.1825)

	* README: Added hint for not using msqlperl mailing lists
	  except for MsqlPerl and MysqlPerl related things.
	* dbd/dbimon.in: Leaving pager mode worked unreliable; fixed.
	  Andreas Koenig <koenig@anna.mind.de>	
	* tests/akmisc.t, tests/mysql.t, tests/mysql2.t: Minor modifications
	  in the connect parameters for passing the test suite under
	  Windows/NT.

1998-01-12  Jochen Wiedmann  <joe@laptop.ispsoft.de> (1.1824)

	* Makefile.lib (InitializeMysql): Modified order of -I statements