@@ -1,7 +1,7 @@
 #!/usr/bin/perl
 
 # $Id: pmysql.PL 1.1 Tue, 30 Sep 1997 01:28:08 +0200 joe $
-my $version = '1.1831';
+my $version = '1.1832';
 
 BEGIN {require 5.002;}
 # use strict;      # only for testing. Unfriendly for the user-eval()s
